third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/pop_positive.exp

Diagnostics:
error: the left-hand side has 2 items but the right-hand side provided 3
  ┌─ tests/checking/typing/v1-commands/pop_positive.move:7:9
  │
7 │         (_, _) = three();
  │         ^^^^^^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/typing/v1-commands/pop_positive.move:7:25
  │
7 │         (_, _) = three();
  │                         ^
